--- a/LLM4Graph/local_dirty_preprocess/preprocess.ipynb
+++ b/LLM4Graph/local_dirty_preprocess/preprocess.ipynb
@@ -5,7 +5,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import os.path as osp\n",
+    "import pyarrow as pa\n",
+    "\n",
+    "data_path = \"/mnt/home/chenzh85/LLMGNN/data\"\n",
+    "data_name = ['cora', 'citeseer', 'pubmed', 'wikics', 'arxiv', 'products']\n",
+    "\n",
+    "for name in data_name:\n",
+    "    prefix = name\n",
+    "    filename = osp.join(data_path, \"{}_fixed_sbert.pt\")\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
